# hello-world-esp32

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  EspSupervising.cpp  EspSupervising.h  FancyCalculating.cpp  FancyCalculating.h  InfoTesting.cpp  WlvlMonitoring.cpp  WlvlMonitoring.h  WlvlSupervising.cpp  WlvlSupervising.h  main.cpp
